--- a/style.css
+++ b/style.css
@@ -1,121 +1,451 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: system-ui;
+    margin: 0;
+    padding: 0;
+    font-family: system-ui;
+    transition: all 0.5s ease;
 }
 
 .container {
-  width: 100%;
-  margin-bottom: 1000px;
+    width: 100%;
+}
+
+.container h1 {
+    text-align: center;
+    margin: 40px;
 }
 
 .banner {
-  text-align: center;
-  margin: 40px 0px;
-  position: relative;
+    text-align: center;
+    margin: 40px 0px;
+    position: relative;
 }
+
 .banner video {
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
+
 .banner .overlay {
-  background-color: black;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-color: rgba(127, 127, 127, 0.2);
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: rgba(127, 127, 127, 0.2);
 }
-.banner button {
-  position: absolute;
-  top: 46%;
-  left: 50%;
-  transform: translateX(-50%);
-  line-height: 30px;
-  padding: 2px 100px;
-  border: none;
-  border-radius: 30px;
-  background: lightblue;
-  box-shadow: 0px 3px 3px grey;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: bold;
+
+.banner .label {
+    position: absolute;
+    top: 46%;
+    left: 50%;
+    transform: translateX(-50%);
+    line-height: 30px;
+    padding: 2px 100px;
+    border: none;
+    border-radius: 30px;
+    background: lightblue;
+    box-shadow: 0px 3px 3px grey;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
 }
 
 .allContries {
-  width: 75%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  height: 400px;
-  border: 0.5px solid #c9c9c9;
-  box-shadow: 0px 4px 5px grey;
-  border-radius: 16px;
+    width: 75%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    height: 400px;
+    border: 0.5px solid #c9c9c9;
+    box-shadow: 0px 4px 5px grey;
+    border-radius: 16px;
 }
+
 .allContries .contryImg {
-  width: 35%;
+    width: 35%;
 }
+
 .allContries .contryImg img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-top-left-radius: 16px;
-  border-bottom-left-radius: 16px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
 }
+
 .allContries .dataContries {
-  width: 65%;
-  display: flex;
-  justify-content: center;
+    width: 65%;
+    display: flex;
+    justify-content: center;
 }
+
 .allContries .dataContries .data {
-  flex: 1;
-  text-align: center;
-  margin: 0px 6px;
+    flex: 1;
+    text-align: center;
+    margin: 0px 6px;
 }
+
 .allContries .dataContries .data p {
-  width: 100%;
-  height: 70px;
-  /* margin: auto; */
-  background: bisque;
-  padding-top: 30px;
+    width: 100%;
+    height: 70px;
+    /* margin: auto; */
+    background: bisque;
+    padding-top: 30px;
 }
+
+.allContries .dataContries .data span {
+    font-size: 19px;
+}
+
 .search {
-  text-align: center;
-  margin: 20px 0px;
+    text-align: center;
+    margin: 20px 0px;
 }
+
 .search select {
-  line-height: 30px;
-  padding: 12px 300px;
-  font-size: 18px;
-  border-radius: 28px;
+    line-height: 30px;
+    padding: 12px 300px;
+    font-size: 18px;
+    border-radius: 28px;
+}
+
+.search select option {
+    text-align: center;
 }
 
 .province .element {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80%;
-  margin: 10px auto;
-  border: 1px solid #b2b2b2;
-  border-radius: 14px;
-  padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    margin: 30px auto;
+    border: 1px solid #b2b2b2;
+    border-radius: 14px;
+    padding: 10px 20px;
+    box-shadow: 0px 3px 4px #e0e0e0;
 }
+
 .province .element .dataName {
-  width: 25%;
+    width: 25%;
 }
+
 .province .element .data {
-  width: 75%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .province .element .data div {
-  text-align: center;
-  flex: 1;
-  border-right: 1px solid;
+    text-align: center;
+    flex: 1;
+    border-right: 1px solid;
 }
+
+.province .element .data div p {
+    font-size: 18px;
+}
+
+.reload {
+    width: 20%;
+    margin: 20px auto;
+}
+
+.reload button {
+    width: 100%;
+    padding: 7px;
+    border: none;
+    background: khaki;
+    border-radius: 20px;
+    box-shadow: 0px 2px 3px grey;
+}
+
+.reload button:hover {
+    box-shadow: none;
+    background: #ece6b0;
+}
+
+.footer {
+    margin-top: 100px;
+    position: relative;
+    width: 100%;
+    height: 400px;
+}
+
+.footer video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.footer .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: rgba(127, 127, 127, 0.5);
+}
+
+.footer .content {
+    top: 40%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    font-size: 23px;
+    letter-spacing: 2px;
+    color: aliceblue;
+}
+
+.footer .content h2 {
+    color: orangered;
+    font-size: 50px;
+    letter-spacing: 4px;
+}
+
+.overlay2 {
+    background-color: #5f5f5f;
+    width: 100%;
+    opacity: 0.7;
+    height: 100%;
+    position: fixed;
+    bottom: 100%;
+    left: 0;
+    transition: all 0.5s ease;
+}
+
+#check:checked~.modal {
+    transition: all 0.5s ease;
+    display: block;
+    top: 10%;
+    opacity: 1;
+}
+
+#check:checked~.overlay2 {
+    transition: all 0.5s ease;
+    bottom: 0%;
+}
+
+.modal {
+    transition: all 0.5s ease;
+    z-index: 9999;
+    opacity: 0.4;
+    position: fixed;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30%;
+    height: 80%;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 4px 5px #323232;
+}
+
+.modal img {
+    transition: all 0.5s ease;
+    width: 100%;
+    border-radius: 15px;
+    height: 100%;
+    object-fit: cover;
+}
+
+.copyright {
+    padding: 2px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.copyright li {
+    list-style: none;
+}
+
+.copyright li a {
+    color: #00d9ff;
+    text-decoration: none;
+}
+
+@media screen and (max-width: 740px) {
+    .mobile-hidden {
+        display: none;
+    }
+    .container h1 {
+        margin: 21px;
+    }
+    .banner .label {
+        top: 40%;
+        left: 10%;
+        right: 10%;
+        line-height: 30px;
+        transform: none;
+    }
+    .allContries {
+        width: 93%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        height: 200px;
+        border: 0.5px solid #c9c9c9;
+        box-shadow: 0px 4px 5px grey;
+        border-radius: 16px;
+    }
+    .allContries .contryImg {
+        display: none;
+        width: 0%;
+    }
+    .allContries .dataContries {
+        width: 100%;
+    }
+    .allContries .dataContries .data {
+        margin: 0px 2px;
+    }
+    .allContries .dataContries .data p {
+        width: 100%;
+        height: 90px;
+        /* margin: auto; */
+        background: bisque;
+        padding-top: 10px;
+        margin-bottom: 10px;
+    }
+    .allContries .dataContries .data span {
+        font-size: 18px;
+    }
+    .search {
+        text-align: center;
+        margin: 20px 0px;
+    }
+    .search select {
+        line-height: 30px;
+        padding: 10px;
+        font-size: 18px;
+        border-radius: 28px;
+        width: 90%;
+    }
+    .province .element {
+        width: 95%;
+        padding: 10px 5px;
+    }
+    .province .element .dataName {
+        width: 20%;
+    }
+    .province .element .data {
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .province .element .data div {
+        text-align: center;
+        flex: 1;
+        border-right: 1px solid;
+        height: 115px;
+    }
+    .province .element .data div p {
+        margin-top: 20px;
+        font-size: 18px;
+    }
+    .reload {
+        width: 80%;
+    }
+    .footer {
+        overflow: hidden;
+        margin-top: 100px;
+        position: relative;
+        width: 100%;
+        height: 300px;
+    }
+    .footer video {
+        width: 170%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .footer .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background-color: rgba(127, 127, 127, 0.5);
+    }
+    .footer .content {
+        top: 30%;
+        position: absolute;
+        left: 10%;
+        right: 10%;
+        transform: none;
+        text-align: center;
+        font-size: 20px;
+        letter-spacing: 2px;
+        color: aliceblue;
+    }
+    .footer .content h2 {
+        color: orangered;
+        font-size: 40px;
+        letter-spacing: 4px;
+    }
+    .copyright {
+        padding: 2px 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .copyright li {
+        width: 30%;
+        list-style: none;
+        font-size: 10px;
+    }
+    .copyright li a {
+        color: #00d9ff;
+        text-decoration: none;
+    }
+    .overlay2 {
+        background-color: #5f5f5f;
+        width: 100%;
+        opacity: 0.8;
+        height: 100%;
+        position: fixed;
+        bottom: 100%;
+        left: 0;
+        transition: all 0.5s ease;
+    }
+    #check:checked~.modal {
+        transition: all 0.5s ease;
+        display: block;
+        top: 10%;
+        opacity: 1;
+    }
+    #check:checked~.overlay2 {
+        transition: all 0.5s ease;
+        bottom: 0%;
+    }
+    .modal {
+        transition: all 0.5s ease;
+        z-index: 9999;
+        opacity: 0.4;
+        position: fixed;
+        top: 100%;
+        left: 7%;
+        transform: none;
+        right: 7%;
+        width: 85%;
+        height: 80%;
+        border-radius: 15px;
+        box-shadow: 0px 4px 5px #323232;
+    }
+    .modal img {
+        transition: all 0.5s ease;
+        width: 90%;
+        border-radius: 15px;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 
 /*# sourceMappingURL=style.css.map */
