--- a/style.scss
+++ b/style.scss
@@ -2,11 +2,16 @@
     margin: 0;
     padding: 0;
     font-family: system-ui;
+    transition: all 0.5s ease;
 }
 
 .container {
     width: 100%;
-    margin-bottom: 1000px;
+    // margin-bottom: 50px
+    & h1 {
+        text-align: center;
+        margin: 40px;
+    }
 }
 
 .banner {
@@ -28,7 +33,7 @@
         object-fit: cover;
         background-color: rgb(127 127 127 / 20%);
     }
-    & button {
+    & .label {
         position: absolute;
         top: 46%;
         left: 50%;
@@ -81,7 +86,9 @@
                 background: bisque;
                 padding-top: 30px;
             }
-            & span {}
+            & span {
+                font-size: 19px;
+            }
         }
     }
 }
@@ -94,6 +101,9 @@
         padding: 12px 300px;
         font-size: 18px;
         border-radius: 28px;
+        & option {
+            text-align: center;
+        }
     }
 }
 
@@ -103,10 +113,11 @@
         justify-content: center;
         align-items: center;
         width: 80%;
-        margin: 10px auto;
+        margin: 30px auto;
         border: 1px solid #b2b2b2;
         border-radius: 14px;
         padding: 10px 20px;
+        box-shadow: 0px 3px 4px #e0e0e0;
         & .dataName {
             width: 25%;
             // background-color: cadetblue;
@@ -123,7 +134,313 @@
                 // width: 20%;
                 flex: 1;
                 border-right: 1px solid;
+                & p {
+                    font-size: 18px;
+                }
             }
+        }
+    }
+}
+
+.reload {
+    width: 20%;
+    margin: 20px auto;
+    & button {
+        width: 100%;
+        padding: 7px;
+        border: none;
+        background: khaki;
+        border-radius: 20px;
+        box-shadow: 0px 2px 3px grey;
+    }
+    & button:hover {
+        box-shadow: none;
+        background: rgb(236, 230, 176);
+    }
+}
+
+.footer {
+    margin-top: 100px;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    & video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    & .overlay {
+        // background-color: black;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        background-color: rgb(127 127 127 / 50%);
+    }
+    .content {
+        top: 40%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        font-size: 23px;
+        letter-spacing: 2px;
+        color: aliceblue;
+        & h2 {
+            color: orangered;
+            font-size: 50px;
+            letter-spacing: 4px;
+        }
+    }
+}
+
+.overlay2 {
+    background-color: #5f5f5f;
+    width: 100%;
+    opacity: 0.7;
+    height: 100%;
+    position: fixed;
+    bottom: 0100%;
+    left: 0;
+    transition: all 0.5s ease;
+    // display: none;
+}
+
+#check:checked~.modal {
+    transition: all 0.5s ease;
+    display: block;
+    top: 10%;
+    opacity: 1;
+}
+
+#check:checked~.overlay2 {
+    transition: all 0.5s ease;
+    bottom: 0%;
+}
+
+.modal {
+    transition: all 0.5s ease;
+    z-index: 9999;
+    // display: none;
+    opacity: 0.4;
+    position: fixed;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 30%;
+    height: 80%;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 4px 5px #323232;
+    & img {
+        transition: all 0.5s ease;
+        width: 100%;
+        border-radius: 15px;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.copyright {
+    padding: 2px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    & li {
+        list-style: none;
+        & a {
+            color: rgb(0, 217, 255);
+            text-decoration: none;
+        }
+    }
+}
+
+@media screen and (max-width: 740px) {
+    .mobile-hidden {
+        display: none;
+    }
+    .container h1 {
+        margin: 21px;
+    }
+    .banner {
+        & .label {
+            top: 40%;
+            left: 10%;
+            right: 10%;
+            line-height: 30px;
+            transform: none;
+        }
+    }
+    .allContries {
+        width: 93%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        height: 200px;
+        border: 0.5px solid #c9c9c9;
+        box-shadow: 0px 4px 5px grey;
+        border-radius: 16px;
+        // align-items: center;
+        & .contryImg {
+            display: none;
+            width: 0%;
+        }
+        & .dataContries {
+            width: 100%;
+            & .data {
+                margin: 0px 2px;
+                & p {
+                    width: 100%;
+                    height: 90px;
+                    /* margin: auto; */
+                    background: bisque;
+                    padding-top: 10px;
+                    margin-bottom: 10px;
+                }
+                & span {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+    .search {
+        text-align: center;
+        margin: 20px 0px;
+        & select {
+            line-height: 30px;
+            padding: 10px;
+            font-size: 18px;
+            border-radius: 28px;
+            width: 90%;
+        }
+    }
+    .province {
+        & .element {
+            width: 95%;
+            padding: 10px 5px;
+            & .dataName {
+                width: 20%;
+                // background-color: cadetblue;
+            }
+            & .data {
+                width: 80%;
+                // background-color: chartreuse;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                // flex: 1;
+                & div {
+                    text-align: center;
+                    flex: 1;
+                    border-right: 1px solid;
+                    height: 115px;
+                    & p {
+                        margin-top: 20px;
+                        font-size: 18px;
+                    }
+                }
+            }
+        }
+    }
+    .reload {
+        width: 80%;
+    }
+    .footer {
+        margin-top: 100px;
+        position: relative;
+        width: 100%;
+        height: 300px;
+        & video {
+            width: 170%;
+            height: 100%;
+            object-fit: cover;
+        }
+        & .overlay {
+            // background-color: black;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            background-color: rgb(127 127 127 / 50%);
+        }
+        .content {
+            top: 30%;
+            position: absolute;
+            left: 10%;
+            right: 10%;
+            transform: none;
+            text-align: center;
+            font-size: 20px;
+            letter-spacing: 2px;
+            color: aliceblue;
+            & h2 {
+                color: orangered;
+                font-size: 40px;
+                letter-spacing: 4px;
+            }
+        }
+    }
+    .copyright {
+        padding: 2px 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        & li {
+            width: 30%;
+            list-style: none;
+            font-size: 10px;
+            & a {
+                color: rgb(0, 217, 255);
+                text-decoration: none;
+            }
+        }
+    }
+    .overlay2 {
+        background-color: #5f5f5f;
+        width: 100%;
+        opacity: 0.8;
+        height: 100%;
+        position: fixed;
+        bottom: 0100%;
+        left: 0;
+        transition: all 0.5s ease;
+        // display: none;
+    }
+    #check:checked~.modal {
+        transition: all 0.5s ease;
+        display: block;
+        top: 10%;
+        opacity: 1;
+    }
+    #check:checked~.overlay2 {
+        transition: all 0.5s ease;
+        bottom: 0%;
+    }
+    .modal {
+        transition: all 0.5s ease;
+        z-index: 9999;
+        // display: none;
+        opacity: 0.4;
+        position: fixed;
+        top: 100%;
+        left: 7%;
+        transform: none;
+        right: 7%;
+        width: 85%;
+        height: 80%;
+        // background-color: white;
+        border-radius: 15px;
+        box-shadow: 0px 4px 5px #323232;
+        & img {
+            transition: all 0.5s ease;
+            width: 90%;
+            border-radius: 15px;
+            height: 100%;
+            object-fit: cover;
         }
     }
 }
